force-spa-testschema/src/objects/Guild__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FoundedDate__c</fullName>
        <label>Founded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>President__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>President</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GuildPresendencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Guild</label>
    <nameField>
        <label>Guild Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guilds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>